[package]
name = "torrent-rs"
version = "0.1.0"
authors = ["95th <vargwin@gmail.com>"]
edition = "2018"

[workspace]
members = ["bencode", "dht"]

[dependencies]
bencode = { path = "bencode" }
dht = { path = "dht" }
rust-crypto = "0.2.36"
ed25519-dalek = "0.9.1"
rand = "0.6"
digest = "0.8.0"

[profile.release]
lto = "yes"